k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopnow
  labels:
    app.kubernetes.io/name: shopnow
    environment: production
